step 4: vue login component

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <title>My Application</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="css/signin.css">
+
 </head>
 
 <body>
 
   <div id="app">
-    <!-- route outlet -->
-    <!-- component matched by the route will render here -->
+    <login-component></login-component>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
