--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div id="app">
-    <login-component></login-component>
+    <home-component></home-component>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
